improve styling of comments and alignment bug

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -567,7 +567,8 @@ div.k-chart {
   border-top-style: solid;
   border-top-color: #EFEFEF;
   padding-top: 50px;
-  padding-bottom: 30px; }
+  padding-bottom: 30px;
+}
 
 .questions_answers_list .questions_answers_question h2 a {
   font-size: 24px;
@@ -575,7 +576,8 @@ div.k-chart {
   color: #3E3E3E;
   padding-bottom: 25px;
   float: left;
-  width: 100%; }
+  width: 100%;
+}
 
 .questions_answers_list .questions_answers_question .questions_answers_asked_avatar img {
   height: 40px;
@@ -587,11 +589,11 @@ div.k-chart {
   -webkit-box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.2);
   box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.2);
 
-
 }
 
 .questions_answers_list .questions_answers_question .questions_answers_asked_avatar img {
-  float: left; }
+  float: left;
+}
 
 .questions_answers_question .questions_answers_asked_date {
   font-size: 14px;
@@ -601,11 +603,13 @@ div.k-chart {
   padding-right: 0px;
   padding-bottom: 0px;
   padding-left: 20px;
-  float: left; }
+  float: left;
+}
 
 #tabs-2 .questions_answers_list {
   float: left;
-  width: 100%; }
+  width: 100%;
+}
 
 .load_more_questions_answers_wrapper {
   float: left;
@@ -614,29 +618,36 @@ div.k-chart {
   padding-top: 35px;
   border-top-width: 1px;
   border-top-style: solid;
-  border-top-color: #EFEFEF; }
+  border-top-color: #EFEFEF;
+}
 
 .load_more_questions_answers_wrapper a.podmedcis_button.grey {
-  margin-left: 40px; }
+  margin-left: 40px;
+}
 
 .questions_answers_question .inner_page_padding {
   padding-top: 0px;
   padding-right: 45px;
   padding-bottom: 0px;
-  padding-left: 45px; }
+  padding-left: 45px;
+}
 
 .questions_answers_asked_date a {
   font-weight: bold;
-  color: #888; }
+  color: #888;
+}
 
 .sub_heading_wrapper .sub_heading_button_set {
-  float: right; }
+  float: right;
+}
 
 .inner.questions_answers_page .sub_heading_wrapper h1 {
-  padding-top: 20px; }
+  padding-top: 20px;
+}
 
 .inner.questions_answers_page {
-  padding-top: 20px; }
+  padding-top: 20px;
+}
 
 .podmedcis_button.take_exam_button {
   background-color: $podmedics_red;
@@ -652,7 +663,8 @@ div.k-chart {
   float: left;
   width: 100%;
   display: none;
-  height: auto; }
+  height: auto;
+}
 
 .main_question_user_avatar {
   height: 72px;
@@ -660,7 +672,8 @@ div.k-chart {
   margin-top: 100px;
   margin-left: auto;
   margin-right: auto;
-  margin-bottom: 25px; }
+  margin-bottom: 25px;
+}
 
 .main_question_user_avatar img {
   height: 72px;
@@ -670,7 +683,8 @@ div.k-chart {
   border: 4px solid #FFF;
   -moz-box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.2);
-  box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.2); }
+  box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.2);
+}
 
 .main_question_header {
   text-align: center;
@@ -679,29 +693,36 @@ div.k-chart {
   padding-bottom: 50px;
   border-bottom-width: 1px;
   border-bottom-style: solid;
-  border-bottom-color: #EFEFEF; }
+  border-bottom-color: #EFEFEF;
+}
 
 .questions_answers_main_question .main_question_header h2 {
   font-size: 24px;
   line-height: 36px;
   padding-right: 85px;
   padding-bottom: 10px;
-  padding-left: 85px; }
+  padding-left: 85px;
+}
 
 .questions_answers_main_question .main_question_header p {
   font-size: 14px;
-  color: #BBB; }
+  color: #BBB;
+}
 
 .questions_answers_main_question .main_question_header p a {
   font-weight: bold;
-  color: #888; }
+  color: #888;
+}
 
 .comment_avatar {
   height: 72px;
   width: 16%;
+  max-width: 110px;
+  min-width: 100px;
   margin-top: 0px;
   margin-bottom: 0px;
-  float: left; }
+  float: left;
+}
 
 .comment_avatar img {
   width: 72px;
@@ -711,23 +732,26 @@ div.k-chart {
   border: 4px solid #FFF;
   -moz-box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.2);
   -webkit-box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.2);
-  box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.2); }
+  box-shadow: 0 0 6px 0 rgba(0, 0, 0, 0.2);
+}
 
 .questions_answers_main_question .comment_info {
   float: left;
-  width: 84%;
-  margin-left: 0px; }
-
+  width: 81%;
+  margin-left: 0px;
+}
 .questions_answers_main_question .comment {
   float: left;
   background-color: #FAFAFA;
-  margin-left: 30px;
-  margin-right: 30px;
+  margin-left: 5%;
+  width: 90%;
+  margin-right: 5%;
   padding-top: 35px;
   padding-bottom: 25px;
   margin-top: 35px;
   border-radius: $standard_border_radius;
-  clear: both; }
+  clear: both;
+}
 
 .questions_answers_main_question p {
   font-size: 14px;
@@ -755,20 +779,24 @@ div.k-chart {
   margin-top: 10px;
   margin-bottom: 10px;
   width: 100%;
-  float: left; }
+  float: left;
+}
 
 .comment_info .comment_badge_wrapper {
   float: left;
   width: 100%;
-  height: 29px; }
+  height: 29px;
+}
 
 .questions_answers_main_question .question_comments_outer .comment_reply {
   float: left;
   background-image: image-url('comment_reply.png');
-  background-position: 16px 11px;
-  margin-left: 50px;
-  padding-left: 30px;
-  background-repeat: no-repeat; }
+  background-position: 9% 20%;
+  margin-left: 0%;
+  padding-left: 9%;
+  width: 89%;
+  background-repeat: no-repeat;
+}
 
 .questions_aswer_comment_textarea {
   float: left;
@@ -803,6 +831,15 @@ div.k-chart {
 .comment:hover .comment_reply_link {
   display: block;
 }
+.comment_reply div.comment_info {
+  width: 75%;
+}
+
+.inner_page_padding.comments_textarea_wrapper {
+  padding-left: 4%;
+  padding-right: 4%;
+}
+
 
 .comments_textarea {
   font-size: 14px;
